--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:label="@string/app_name" android:name=".Expandable2"></activity>
  <activity android:label="@string/app_name" android:name=".SetView"></activity>
   <activity android:label="@string/app_name" android:name=".LogEntries"></activity>
+    <activity android:label="@string/app_name" android:name=".AddLogEntry"></activity>
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
