--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,11 @@
  <activity android:label="@string/app_name" android:name=".SetView"></activity>
   <activity android:label="@string/app_name" android:name=".LogEntries"></activity>
     <activity android:label="@string/app_name" android:name=".AddLogEntry"></activity>
+    <activity android:label="@string/app_name" android:name=".LogChooser"></activity>
+    <activity android:label="@string/app_name" android:name=".ByExerciseList"></activity>
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
+    <uses-permission android:name="android.permission.INTERNET">
+</uses-permission>
 </manifest> 
