--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,8 @@
     <activity android:label="@string/app_name" android:name=".AddLogEntry"></activity>
     <activity android:label="@string/app_name" android:name=".LogChooser"></activity>
     <activity android:label="@string/app_name" android:name=".ByExerciseList"></activity>
+    <activity android:label="@string/app_name" android:name=".Register"></activity>
+     <activity android:label="@string/app_name" android:name=".Login"></activity>
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
