--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <activity android:label="@string/app_name" android:name=".ByExerciseList"></activity>
     <activity android:label="@string/app_name" android:name=".Register"></activity>
      <activity android:label="@string/app_name" android:name=".Login"></activity>
+     <activity android:label="@string/app_name" android:name=".Synchronization"></activity>     
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
