--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,10 @@
      <activity android:label="@string/app_name" android:name=".Login"></activity>
      <activity android:label="@string/app_name" android:name=".Synchronization"></activity>
           <activity android:label="@string/app_name" android:name=".RepsList"></activity>
-                    <activity android:label="@string/app_name" android:name=".AddRepsEntry"></activity>      
+                    <activity android:label="@string/app_name" android:name=".AddRepsEntry"></activity>
+     <activity android:label="@string/app_name" android:name=".ProgramsList"></activity>
+          <activity android:label="@string/app_name" android:name=".ProgramEdit"></activity>
+          <activity android:label="@string/app_name" android:name=".ProgramView"></activity>       
 </application>
     <uses-sdk android:minSdkVersion="7" />
 
