--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,9 @@
 	<activity android:label="@string/app_name" android:name=".MeasurementEdit"></activity>
 	<activity android:label="@string/app_name" android:name=".MeasLogEntries"></activity>
 	<activity android:label="@string/app_name" android:name=".SessionTabs"></activity>
-           
+	<activity android:label="@string/app_name" android:name=".Account"></activity>
+	<activity android:label="@string/app_name" android:name=".Downloads"></activity> 
+	<activity android:label="@string/app_name" android:name=".ImportExercises"></activity>             
 </application>
     <uses-sdk android:minSdkVersion="3" />
 
