--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,10 +15,10 @@
 
 	<activity android:label="@string/app_name" android:name=".GroupEdit"></activity>
 	<activity android:label="@string/app_name" android:name=".ExerciseEdit"></activity>
-	<activity android:label="@string/app_name" android:name=".SetsList"></activity>
-	<activity android:label="@string/app_name" android:name=".SetEdit"></activity>
+	<activity android:label="@string/app_name" android:name=".WorkoutsList"></activity>
+	<activity android:label="@string/app_name" android:name=".WorkoutEdit"></activity>
 	<activity android:label="@string/app_name" android:name=".ExercisesList"></activity>
-	<activity android:label="@string/app_name" android:name=".SetView"></activity>
+	<activity android:label="@string/app_name" android:name=".WorkoutView"></activity>
 	<activity android:label="@string/app_name" android:name=".LogEntries"></activity>
 	<activity android:label="@string/app_name" android:name=".AddLogEntry"></activity>
 	<activity android:label="@string/app_name" android:name=".LogChooser"></activity>
