--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,10 @@
 	<activity android:label="@string/app_name" android:name=".Account"></activity>
 	<activity android:label="@string/app_name" android:name=".Downloads"></activity> 
 	<activity android:label="@string/app_name" android:name=".ImportExercises"></activity>      
-	<activity android:label="@string/app_name" android:name=".ImportPrograms"></activity>        
+	<activity android:label="@string/app_name" android:name=".ImportPrograms"></activity>   
+	<activity android:label="@string/app_name" android:name=".Statistics"></activity>   
+	<activity android:label="@string/app_name" android:name=".StatsList"></activity>   
+	<activity android:label="@string/app_name" android:name=".Chart"></activity> 
 </application>
     <uses-sdk android:minSdkVersion="3" />
 
