--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,7 +21,7 @@
 	<activity android:label="@string/app_name" android:name=".WorkoutView"></activity>
 	<activity android:label="@string/app_name" android:name=".Register"></activity>
 	<activity android:label="@string/app_name" android:name=".Login"></activity>
-	<activity android:label="@string/app_name" android:name=".SynchronizationView"></activity>
+	<activity android:label="@string/app_name" android:name=".SynchronizationView" android:configChanges="keyboardHidden|orientation"></activity>
 	<activity android:label="@string/app_name" android:name=".RepsList"></activity>
 	<activity android:label="@string/app_name" android:name=".ProgramsList"></activity>
 	<activity android:label="@string/app_name" android:name=".ProgramEdit"></activity>
@@ -40,7 +40,8 @@
 	<activity android:label="@string/app_name" android:name=".ImportPrograms"></activity>   
 	<activity android:label="@string/app_name" android:name=".Statistics"></activity>   
 	<activity android:label="@string/app_name" android:name=".StatsList"></activity>   
-	<activity android:label="@string/app_name" android:name=".Chart"></activity> 
+	<activity android:label="@string/app_name" android:name=".Chart"></activity>
+	<activity android:label="@string/app_name" android:name=".MeasStats"></activity> 
 </application>
     <uses-sdk android:minSdkVersion="3" />
 
