--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,7 @@
 	<activity android:label="@string/app_name" android:name=".Chart"></activity>
 	<activity android:label="@string/app_name" android:name=".MeasStats"></activity> 
 	<activity android:label="@string/app_name" android:name=".Settings"></activity> 
+	<activity android:label="@string/app_name" android:name=".ExerciseView"></activity>
 </application>
     <uses-sdk android:minSdkVersion="3" />
 
